@@ -97,6 +97,18 @@ void new_instance(nsPluginInstance * instance, nsPluginCreateData * parameters)
                 href = item;
             }
 
+            if (g_ascii_strcasecmp(parameters->argn[i], "qtsrc") == 0) {
+                item = g_new0(ListItem, 1);
+                g_strlcpy(item->src,src->src,1024);
+                tmp = g_strrstr(item->src,"/") + sizeof(char);
+                tmp[0] = '\0';
+                g_strlcat(item->src, parameters->argv[i], 1024);
+                item->streaming = streaming(item->src);
+                item->play = TRUE;
+                item->id = instance->nextid++;
+                instance->playlist = g_list_append(instance->playlist, item);
+            }
+
             if (g_ascii_strcasecmp(parameters->argn[i], "file") == 0) {
                 item = g_new0(ListItem, 1);
                 g_strlcpy(item->local, parameters->argv[i], 1024);
